# funcattr

./: LICENSE.txt  README.rst  funcattr.py  pyproject.toml
.github/workflows/: test.yml
docs/: Makefile  basic_usage.rst  conf.py
tests/: test_annotate.py
