[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "funcattr"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.rst'
dynamic = ["version", "description"]
classifiers = [
]
dependencies = [
]

[project.optional-dependencies]
test = [
  'pytest',
]

[project.urls]
'Documentation' = 'https://funcattr.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/funcattr'
'Bug Tracker' = 'https://github.com/kalekundert/funcattr/issues'
'Continuous Integration' = 'https://github.com/kalekundert/funcattr/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/funcattr'

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.coverage.run]
branch = true
parallel = true
source = ['funcattr']

[tool.coverage.report]
exclude_lines = [
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
]

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]
ignore_generated_commits = true
generated_commits = ['^Merge']

[tool.semantic_release]
branch = 'release'
version_variable = 'funcattr/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
major_on_zero = false
